# 2019s-verification

./: .gitignore  .gitmodules  Flowpipes.jl  ODECommon.jl  ODEIntegration.jl  README.md  components.html  components.rmd  documentation.html  documentation.md  documentation.rmd  helper.jl  test.jl
benchmarks/: profile_diff.jl  profiler.txt
examples/: affine_jac_tm.jl  affine_jac_tm_1.jl  affine_jac_tm_3.jl  affine_tm.jl  affine_tm_1.jl  affine_tm_3.jl  approx.jl  approx_2.jl  approx_3.jl  fixjacpoint.jl  fixjacpoint_3.jl  fixpoint.jl  fixpoint_0.jl  fixpoint_02.jl  fixpoint_1.jl  fixpoint_3.jl  jac_tm_constructor_1.jl  taylor_coeff.jl  tm_constructor.jl  tm_constructor_1.jl  tm_constructor_2.jl  tm_constructor_3.jl
experiments/: affine_taylor.jl  autodiff.jl  autodiff_1.jl  fixpoint.jl  fixpoint_01.jl  fixpoint_03.jl  fixpoint_1.jl  intervals.jl  jac_tm_constructor.jl  taylor.jl  taylor_approx.jl  test_plots.jl  test_zygote.jl  tm_constructor.jl  tm_constructor_1.jl
module/: AffineArithmetic.jl  DiffLogger.jl  ModalIntervalArithmetic.jl
reachability/: Affine.jl  ModalInterval.jl  ODECommon.jl  ODEIntegration.jl  affine.jl  helper.jl  main.jl  run.jl  taylor.jl  taylor2.jl  test.jl
reachability/run/: taylor_models_1.jl  test_me.jl
rino/: CMakeLists.txt  dde_integr.cpp  main.cpp  ode_def.cpp
rino-hscc17/: .gitignore  CMakeLists.txt  Makefile  main.cpp  ode_def.cpp  ode_def.h  ode_integr.cpp  script  testsuite.cpp
rino-hscc17/aaflib-0.1/: aa_aafapprox.c
rino-hscc17/output_sauv/: relmeanerror_diff.out  x1center.out  x1exact.out  x1inner.out  x1inner_minimal.out  x1inner_robust.out  x1outer_minimal.out
rino/output/: relmeanerror_diff.out
rino/output_sauv/: meanerror_diff.out  width_ratio.out  x1outer.out
scripts/: interval_notation.tex  notation.tex  task-list.lua
test/: AffineTest.jl  ModalIntervalTest.jl  runtests.jl
verification/: ModalInterval.jl  ODECommon.jl  ODEIntegration.jl  autodiff.jl  documentation.md  main.jl  test.jl
verification/module/: AffineArithmetic.jl
verification/run/: taylor_models.jl
